Fix whitespace that appeared at the bottom.
When moving from body to an inner div the margin form the bottom
section overran. Add 30px of padding to the cv.div to cover this.

--- a/css/style.less
+++ b/css/style.less
@@ -3,6 +3,7 @@
 
 .cv {
   background: #87ceeb url('../gfx/blue_swirl.jpg');
+  padding-bottom: 30px;
   padding-top: 20px;
   padding-left: 10%;
   padding-right: 10%;
